# broccoli

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile.server  Dockerfile.worker  LICENSE  README.md  docker-compose.e2e.yml  docker-compose.observability.yml  docker-compose.yaml  docker-entrypoint-worker.sh  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  prettier.config.ts  tsconfig.base.json  tsconfig.json
.agents/skills/broccoli-docs-user/: SKILL.md
.claude/skills/broccoli-diagrams/: SKILL.md
.claude/skills/broccoli-docs/: SKILL.md
.claude/skills/broccoli-docs-maintainer/: SKILL.md
.claude/skills/broccoli-docs-plugin-dev/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml  scheduled.yml
.husky/: pre-commit  pre-push
config/: config.example.toml  config.toml  otel-collector.yaml  prometheus.yml  seaweedfs-s3.json  worker.example.toml  worker.toml
docs/: build.md  release.md
docs/authoring/: diagrams.md  house-style.md
docs/plans/: 2026-04-03-config-language-fairness.md  2026-05-01-stress-test-design.md  2026-05-01-stress-test-impl.md  2026-05-01-stress-test-plugin-decision.md  2026-05-03-stress-test-release-design.md  2026-05-03-stress-test-release.md  2026-05-04-platform-release-design.md  2026-05-04-platform-release.md
examples/test-plugin/: Cargo.toml  plugin.toml
examples/test-plugin/app/: index.js
examples/test-plugin/src/: lib.rs
plugins/batch-evaluator/: Cargo.toml  plugin.toml
plugins/batch-evaluator/src/: batch.rs  lib.rs
plugins/communication-evaluator/: Cargo.toml  plugin.toml
plugins/communication-evaluator/frontend/: package.json  pnpm-lock.yaml
plugins/communication-evaluator/src/: config.rs  interpret.rs  lib.rs  operation.rs
plugins/config-ui-test/: plugin.toml
plugins/config-ui-test/frontend/: package.json  pnpm-lock.yaml
plugins/cooldown/: Cargo.toml  plugin.toml
plugins/cooldown/frontend/: package.json  pnpm-lock.yaml
plugins/cooldown/frontend/src/: CooldownConfigInfo.tsx  CooldownRejection.tsx  CooldownStatus.tsx  index.tsx
plugins/cooldown/i18n/: en.toml
plugins/cooldown/src/: lib.rs
plugins/icpc/: Cargo.toml  plugin.toml
plugins/icpc/i18n/: en.toml
plugins/icpc/src/: config.rs  evaluate.rs  lib.rs  persist.rs
plugins/icpc/web/: package.json  pnpm-lock.yaml
plugins/ioi/: Cargo.toml  plugin.toml
plugins/ioi/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
plugins/ioi/frontend/src/: FeedbackLevelSelector.tsx  IoiConfigBanner.tsx  IoiContestInfo.tsx  IoiScoreboard.tsx  IoiSubmissionResult.tsx  ScoreboardTiebreakerSelector.tsx  ScoreboardVisibilitySelector.tsx  ScoringModeSelector.tsx  SubtaskEditor.tsx  TokenConfigPanel.tsx  TokenPanel.tsx  feedback-visibility.ts  index.tsx  permissions.ts  styles.css  types.ts
plugins/ioi/frontend/src/hooks/: useIoiApi.ts  useTestCases.ts
plugins/ioi/i18n/: en.toml  zh-CN.toml
plugins/ioi/src/: config.rs  evaluate.rs  evaluate_batch.rs  judge.rs  lib.rs  persist.rs  scoring.rs  subtasks.rs  tokens.rs
plugins/ioi/web/: package.json  tsconfig.json
plugins/ioi/web/src/: FeedbackLevelSelector.tsx  IoiConfigBanner.tsx  IoiContestInfo.tsx  IoiScoreboard.tsx  IoiSubmissionResult.tsx  ScoringModeSelector.tsx  SubtaskEditor.tsx  TokenConfigPanel.tsx  TokenPanel.tsx  config-rules.ts  feedback-visibility.ts  index.tsx  types.ts
plugins/ioi/web/src/hooks/: useIoiApi.ts  useIsIoiContest.ts  useTestCases.ts
plugins/print/: Cargo.toml  README.md  plugin.toml
plugins/print/client/: Cargo.toml  print-client.bak.toml  print-client.toml
plugins/print/client/assets/windows/: README.md  SumatraPDF-LICENSE.txt
plugins/print/client/src/: api.rs  config.rs  doctor.rs  main.rs  print.rs  run.rs  setup.rs
plugins/print/client/src/render/: highlight.rs  layout.rs  mod.rs  pdf.rs
plugins/print/i18n/: en.toml  zh-CN.toml
plugins/standard-checkers/: Cargo.toml  plugin.toml
plugins/standard-languages/: Cargo.toml  plugin.toml
plugins/submission-limit/: Cargo.toml  plugin.toml
release/: .env.example  .env.gateway.example  .env.infra.example  .env.server.example  .env.worker.example  README.md  docker-compose.gateway.yaml.template  docker-compose.infra.yaml.template  docker-compose.server.yaml.template  docker-compose.single-host.object-storage.yaml.template  docker-compose.worker.yaml.template  install.sh
release/docs/: operator-runbook.md  tls-with-caddy.md  upgrade.md
release/examples/: Caddyfile  Caddyfile.gateway  Dockerfile.worker.custom
scripts/: build-bundle.sh  build-plugins.sh  fetch-stress-test-binaries.sh  fix-live-ubuntu-isolate.sh  setup-wsl2-worker-isolate.sh
website/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
website/.fonts/: Excalifont-OFL.txt
website/diagrams/: README.md  build.cjs  render.cjs  render.test.cjs  scenes.cjs
website/docs/: downloads.md  intro.md
website/static/: CNAME
(+83 files in other folders)
