[workspace]
members = [
  "packages/common",
  "packages/mq",
  "packages/plugin-core",
  "packages/server",
  "packages/worker",
]
exclude = ["examples", "plugins"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
broccoli_queue = { version = "0.4.6", features = ["redis"] }
chrono = "0.4.43"
common = { path = "packages/common" }
config = "0.15.19"
extism = "1.13.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
plugin-core = { path = "packages/plugin-core" }
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = "2.0.0-rc.29"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zip = { version = "7", default-features = false, features = ["deflate"] }
