[workspace]
members = [
  "packages/common",
  "packages/mq",
  "packages/plugin-core",
  "packages/server",
  "packages/worker",
]
exclude = ["examples", "plugins"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
broccoli_queue = { version = "0.4.6", features = ["redis"] }
chrono = { version = "0.4.43", features = ["serde"] }
common = { path = "packages/common" }
config = "0.15.19"
extism = "1.13.0"
hex = "0.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
matchit = "0.9.1"
mime_guess = "2.0.5"
mq = { path = "packages/mq" }
plugin-core = { path = "packages/plugin-core" }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = "2.0.0-rc.29"
sha2 = "0.10"
serde_json = "1.0.149"
time = "0.3.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1", features = ["v4", "v7"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
zip = { version = "7", default-features = false, features = ["deflate"] }
