[package]
name = "batch-evaluator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["broccoli-server-sdk/guest", "dep:extism-pdk"]

[dependencies]
extism-pdk = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
broccoli-server-sdk = { path = "../../packages/server-sdk" }

[profile.release]
opt-level = "z"
lto = true
