[package]
name = "ioi-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:extism-pdk"]

[dependencies]
extism-pdk = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
broccoli-server-sdk = { path = "../../packages/server-sdk", features = ["guest"] }

[profile.release]
opt-level = "z"
lto = true
