[package]
name = "broccoli-print-client"
version = "0.1.0"
edition = "2021"
description = "Cross-platform print station client for the broccoli print plugin"
license = "MIT"

[[bin]]
name = "print-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dialoguer = "0.11"
printpdf = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
toml = "0.8"
unicode-width = "0.2"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
